# gordo-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg  tasks.py
.github/workflows/: ci.yaml  pypi.yaml  snyk.yaml  version.yaml
ci/: check_version.sh
docs/: Makefile  cli.rst  conf.py  index.rst  make.bat
docs/api/: client.rst  dataframe.rst  forwarders.rst  index.rst  io.rst  schemas.rst  utils.rst
gordo/client/: __init__.py  client.py  dataframe.py  forwarders.py  io.py  schemas.py  utils.py
gordo/client/cli/: client.py  custom_types.py
gordo_client/: __init__.py  client.py  forwarders.py  io.py  utils.py
gordo_client/cli/: client.py  custom_types.py
scripts/: check_code.sh  tests.sh
tests/: conftest.py  test_cli.py  test_client.py  test_forwarders.py  test_gordo_client.py  test_utils.py  utils.py
tests/responses/: anomaly.json  metadata.json  model.json  model_no_revision.json  revision.json
