[tool.poetry]
name = "gordo-client"
version = "5.1.1"
description = "Gordo client"
authors = ["Equinor ASA <fg_gpl@equinor.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/equinor/gordo-client"
repository = "https://github.com/equinor/gordo-client"
keywords = ["gordo-client"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "LICENSE",
]
packages = [
    { include = "gordo_client" }
]

[tool.poetry.dependencies]
python = "^3.7"
gordo-dataset = "^4.1.1"
wrapt = "~1.11"
requests = "^2.20"
simplejson = "^3.17.2"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = ">=22.1.0,<23.0.0"
isort = "<5"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
mock = "^4.0.2"
pytest-mock = "^3.3.1"
docker = "~=4.0"
responses = "~=0.10"
invoke = "^1.4.1"
safety = "^1.9.0"
wemake-python-styleguide = "~0.16.0"

[tool.poetry.scripts]
gordo-client = 'gordo_client.cli.client:gordo_client'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".cache", ".venv"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "gordo"
url = "https://pkgs.dev.azure.com/EquinorASA/OMNIA.prevent/_packaging/gordo/pypi/simple/"
secondary = true
