[tool.poetry]
name = "gordo-client"
version = "6.1.2"
description = "Gordo client"
authors = ["Equinor ASA <fg_gpl@equinor.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/equinor/gordo-client"
repository = "https://github.com/equinor/gordo-client"
keywords = ["gordo-client"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
include = [
    "LICENSE",
    "gordo_core/_version.py"
]
packages = [
    { include = "gordo_client" }
]

[tool.poetry.dependencies]
python = "^3.9"
gordo-core = ">=0.1.0,<1.0.0"
wrapt = "^1.11.0"
requests = "^2.20"
simplejson = "^3.17.2"
click = ">=7.0.0,<9.0.0"
pydantic = "^1.8.2"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
black = ">=22.1.0,<23.0.0"
docker = "^4.2.0"
pytest = "^6.1.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
pytest-xdist = "^2.1.0"
pytest-mypy = "0.9.1"
pytest-flakes = "4.0.5"
types-pytz = "*"
types-requests = "*"
types-setuptools = "*"
types-python-dateutil = "*"
types-simplejson = "*"
types-PyYAML = "*"
types-cachetools = "*"
responses = "~0.10"

[tool.poetry.scripts]
gordo-client = 'gordo_client.cli.client:gordo_client'

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
